tests/ui/expr/if/attrs/stmt-expr-gated.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt-expr-gated.rs:2:13
   |
LL |     let _ = #[deny(warnings)] if true {
   |             ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
